--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color:rgb(247,247,250);
+    font-family: Arial, sans-serif;
 }
 
 
@@ -25,16 +26,22 @@ body {
 #logotext {
     font-size: 190%;
     font-weight: 900;
+    vertical-align: middle;
 }
 
+.contenitore {
+    margin: 0 auto;
+    width: 70%;
+    background-color: rgb(255,255,255);
+    border-radius: 5px;
+    margin-bottom: 1%;
+}
 
 /* Corpo pagina */
 
 /* Menù */
 
 .contenitore-menù {
-    margin: auto;
-    width: 70%;
     margin-top: 4%;
     padding: 1.5%;
     background-color: rgb(255,255,255);
@@ -42,10 +49,10 @@ body {
 }
 
 #add-task {
-    background-color: rgb(82,182,235);
-    color: rgb(245,245,245);
     border: solid rgb(82,182,235);
+    background-color: rgb(82,182,235);
     border-radius: 5px;
+    color: rgb(245,245,245);
     padding: 0.5%;
     font-size: 70%;
     margin-left: 5%;
@@ -60,9 +67,75 @@ body {
     font-size: 70%;
 }
 
-.contenitore {
-    margin: auto;
-    width: 70%;
+/* Elenco compiti */
 
-    background-color: rgb(255,255,255);
+.tasks {
+    padding: 3% 5%;
+}
+
+li {
+    list-style: none;
+    padding: 1.5%;
+    font-weight: 700;
+    font-size: 95%;
+    color: rgb(77, 77, 77);
+}
+
+.check-mark {
+    display: inline-block;
+    margin-right: 1%;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    font-size: 80%;
+    text-align: center;
+    border: 1.5px solid rgba(14, 209, 167, 0.699);
+    color: rgba(14, 209, 167, 0.699);
+    border-radius: 50px;
+}
+
+.cross-mark {
+    display: inline-block;
+    margin-right: 1%;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    font-size: 80%;
+    text-align: center;
+    border: 1.5px solid rgba(209, 14, 14, 0.699);
+    color: rgba(209, 14, 14, 0.699);
+    border-radius: 50px;
+}
+
+.label {
+    margin: 0.5%;
+    color: rgb(245,245,245);
+    border-radius: 18px;
+    padding: 0.5%;
+    font-size: 70%;
+}
+
+.editorial {
+    background-color: rgba(62, 168, 255, 0.945);
+
+}
+
+.q1-goals {
+    background-color: rgb(150, 93, 177);
+}
+
+.recruiting {
+    background-color: rgba(9, 148, 118, 0.699);
+}
+
+.mobile {
+    background-color: rgb(244, 164, 96);
+}
+
+.website {
+    background-color: rgba(209, 32, 135, 0.692);
+}
+
+.sales {
+    background-color: rgba(157, 196, 18, 0.658)
 }
